test/invalid/array-assign-in-func.js
function f(arr, x) {
    arr[0] = x;
}
f;
var a = [1];
f(a, 's');
